# Hackathon-I-Quater-4

./: .gitignore  404.html  blog.html  constitution.md  index.html  main.py  markdown-page.html  pyproject.toml  requirements.txt  signin.html  signup.html  sitemap.xml  test_api.py  test_api_port8001.py  test_api_port8002.py  test_rag_implementation.py
.spec/: clarify.md  constitution.md  plan.md  specifications.md  tasks.md
backend/: .env  .gitignore  DOCUMENTATION.md  README.md  embedding_pipeline_main.py  main.py  pyproject.toml  requirements.txt  retrive.py  validate_success_criteria.py  validation.py
backend/app/: main.py
backend/app/api/: auth.py  chat.py
backend/app/core/: security.py
backend/app/db/: crud.py  schemas.py
backend/app/models/: chat.py
backend/app/services/: agent.py  integration_tests.py  metrics_service.py  qdrant_retriever.py  qdrant_service.py  test_query_repository.py  test_runner.py  test_suite.py
backend/test_reports/: comprehensive_test_report_20251223_104359.json  comprehensive_test_report_20251223_104952.json
backend/validation_reports/: final_validation_report_20251223_104952.json
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
docs/: intro.html  physical-ai-humanoid-robotics.html  week-1-2-introduction.html  week-3-5-ros2-fundamentals.html  week-6-7-gazebo-simulation.html  week-8-10-nvidia-isaac-platform.html
my-website/: docusaurus.config.ts  package-lock.json  package.json  requirements.txt
tests/: conftest.py  (+8 more)
(+198 files in other folders)
